--- a/aboutus.html
+++ b/aboutus.html
@@ -109,7 +109,7 @@
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb col-12">
             <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">About</li>
+            <li class="breadcrumb-item active" aria-current="page">About Us</li>
           </ol>
         </nav>
       </div>
@@ -251,6 +251,11 @@
     <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
       integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Awesome kit -->
+    <script
+      src="https://kit.fontawesome.com/15e5eff456.js"
       crossorigin="anonymous"
     ></script>
 
