--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
         </div>
       </div>
     </footer>
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -207,6 +208,12 @@
     <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
       integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Awesome kit -->
+    <script
+      src="https://kit.fontawesome.com/15e5eff456.js"
       crossorigin="anonymous"
     ></script>
 
