--- a/aboutus.html
+++ b/aboutus.html
@@ -27,7 +27,9 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Ristorante con Fusion</a>
+        <a class="navbar-brand" href="#"
+          ><img src="./img/logo.png" height="30" width="41"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -108,7 +110,13 @@
               your culinary senses!
             </p>
           </div>
-          <div></div>
+          <div class="col-12 col-sm align-self-center">
+            <img
+              src="./img/logo.png"
+              alt="Logo Ristorante con Fusion"
+              class="img-fluid"
+            />
+          </div>
         </div>
       </div>
     </header>
