--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Ristorante con Fusion</a>
+        <a class="navbar-brand" href="#"
+          ><img src="./img/logo.png" height="30" width="41"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -108,7 +110,13 @@
               your culinary senses!
             </p>
           </div>
-          <div></div>
+          <div class="col-12 col-sm align-self-center">
+            <img
+              src="./img/logo.png"
+              alt="Logo Ristorante con Fusion"
+              class="img-fluid"
+            />
+          </div>
         </div>
       </div>
     </header>
@@ -118,12 +126,21 @@
           <h3>Our Lipsmacking Culinary Creations</h3>
         </div>
         <div class="col col-sm order-sm-first col-md">
-          <h2>Uthappizza</h2>
-          <p>
-            A unique combination of Indian Uthappam (pancake) and Italian pizza,
-            topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia
-            onion, Guntur chillies and Buffalo Paneer.
-          </p>
+          <div class="media">
+            <img
+              src="./img/uthappizza.png"
+              alt="Uthappizza"
+              class="d-flex mr-3 align-self-center img-thumbnail"
+            />
+            <div class="media-body">
+              <h2 class="mt-0">Uthappizza</h2>
+              <p>
+                A unique combination of Indian Uthappam (pancake) and Italian
+                pizza, topped with Cerignola olives, ripe vine cherry tomatoes,
+                Vidalia onion, Guntur chillies and Buffalo Paneer.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -132,13 +149,22 @@
           <h3>This Month's Promotions</h3>
         </div>
         <div class="col col-sm col-md">
-          <h2>Weekend Grand Buffet</h2>
-          <p>
-            Featuring mouthwatering combinations with a choice of five different
-            salads, six enticing appetizers, six main entrees and five choicest
-            desserts. Free flowing bubbly and soft drinks. All for just $19.99
-            per person
-          </p>
+          <div class="media">
+            <div class="media-body">
+              <h2>Weekend Grand Buffet</h2>
+              <p>
+                Featuring mouthwatering combinations with a choice of five
+                different salads, six enticing appetizers, six main entrees and
+                five choicest desserts. Free flowing bubbly and soft drinks. All
+                for just $19.99 per person
+              </p>
+            </div>
+            <img
+              src="./img/buffet.png"
+              alt=""
+              class="d-flex img-tumbnail ml-3 align-items-center"
+            />
+          </div>
         </div>
       </div>
 
@@ -147,14 +173,23 @@
           <h3>Meet our Culinary Specialists</h3>
         </div>
         <div class="col col-sm order-sm-first col-md">
-          <h2>Alberto Somayya</h2>
-          <h4>Executive Chef</h4>
-          <p>
-            Award winning three-star Michelin chef with wide International
-            experience having worked closely with whos-who in the culinary
-            world, he specializes in creating mouthwatering Indo-Italian fusion
-            experiences.
-          </p>
+          <div class="media">
+            <img
+              src="./img/alberto.png"
+              alt="Alberto"
+              class="d-flex img-tumbnail mr-3 align-self-center"
+            />
+            <div class="media-body">
+              <h2>Alberto Somayya</h2>
+              <h4>Executive Chef</h4>
+              <p>
+                Award winning three-star Michelin chef with wide International
+                experience having worked closely with whos-who in the culinary
+                world, he specializes in creating mouthwatering Indo-Italian
+                fusion experiences.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
