--- a/index.html
+++ b/index.html
@@ -133,7 +133,10 @@
               class="d-flex mr-3 align-self-center img-thumbnail"
             />
             <div class="media-body">
-              <h2 class="mt-0">Uthappizza</h2>
+              <h2 class="mt-0">
+                Uthappizza <span class="badge badge-danger">HOT</span>
+                <span class="badge badge-pill badge-secondary">$4.99</span>
+              </h2>
               <p>
                 A unique combination of Indian Uthappam (pancake) and Italian
                 pizza, topped with Cerignola olives, ripe vine cherry tomatoes,
@@ -151,7 +154,9 @@
         <div class="col col-sm col-md">
           <div class="media">
             <div class="media-body">
-              <h2>Weekend Grand Buffet</h2>
+              <h2>
+                Weekend Grand Buffet <span class="badge badge-danger">NEW</span>
+              </h2>
               <p>
                 Featuring mouthwatering combinations with a choice of five
                 different salads, six enticing appetizers, six main entrees and
