--- a/index.html
+++ b/index.html
@@ -110,12 +110,17 @@
               your culinary senses!
             </p>
           </div>
-          <div class="col-12 col-sm align-self-center">
+          <div class="col-12 col-sm-3 align-self-center">
             <img
               src="./img/logo.png"
               alt="Logo Ristorante con Fusion"
               class="img-fluid"
             />
+          </div>
+          <div class="col-12 col-sm-3 align-self-center">
+            <a role="button" href="#reservetable" class="btn btn-warning"
+              ><h4>&nbsp;&nbsp; Reserve table&nbsp;&nbsp;</h4>
+            </a>
           </div>
         </div>
       </div>
@@ -196,6 +201,55 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="row row-content">
+        <a name="reservetable"></a>
+        <form action="" class="input-group">
+          <div class="col-12 col-sm-2"></div>
+          <div class="col-12 col-sm-8">
+            <div class="card">
+              <h3 class="card-header bg-warning text-white">Reserve a table</h3>
+              <div class="card-body">
+                <div class="row">
+                  <div class="col-12 col-sm-3">Number of Guest:</div>
+                  <div class="col-12 col-sm-9">
+                    <input type="radio" id="one" name="guests" />
+                    <label for="one">1</label>
+                    <input type="radio" id="two" name="guests" />
+                    <label for="two">2</label>
+                    <input type="radio" id="tree" name="guests" />
+                    <label for="tree">3</label>
+                    <input type="radio" id="four" name="guests" />
+                    <label for="four">4</label>
+                    <input type="radio" id="five" name="guests" />
+                    <label for="five">5</label>
+                    <input type="radio" id="six" name="guests" />
+                    <label for="six">6</label>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-12 col-sm-3">Date and Time:</div>
+                  <div class="col-12 col-sm-9">
+                    <span>
+                      <input type="date" name="date" id="date" />
+                    </span>
+                    <span>
+                      <input type="time" name="time" id="time" />
+                    </span>
+                  </div>
+                </div>
+                <div class="row mt-3">
+                  <div class="col col-sm-9 offset-sm-3">
+                    <button type="button" class="btn btn-primary">
+                      Reserve
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-2"></div>
+        </form>
       </div>
     </div>
 
