--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@
       <div class="container">
         <div class="row row-header">
           <div class="col-12 col-sm-6">
-            <h1>Ristorante con Fusion</h1>
+            <h1>
+              Ristorante con Fusion
+              <span class="badge badge-warning badge-pill custom"> TEST</span>
+            </h1>
             <p>
               We take inspiration from the World's best cuisines, and create a
               unique fusion experience. Our lipsmacking creations will tickle
