--- a/contactus.html
+++ b/contactus.html
@@ -28,11 +28,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#"
-          ><img src="./img/logo.png" height="30" width="41" /><img
-            src="./img/logo.png"
-            height="30"
-            width="41"
-        /></a>
+          ><img src="./img/logo.png" height="30" width="41" /></a>
         <button
           class="navbar-toggler"
           type="button"
