--- a/aboutus.html
+++ b/aboutus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Ristorante Con Fusion</title>
+    <title>TEST - zmena nadpisu</title>
     <!-- Required meta tags always come first -->
     <meta charset="utf-8" />
     <meta
@@ -103,7 +103,7 @@
       <div class="container">
         <div class="row row-header">
           <div class="col-12 col-sm-6">
-            <h1>Ristorante con Fusion</h1>
+            <h1>XXXXXRistorante con Fusion</h1>
             <p>
               We take inspiration from the World's best cuisines, and create a
               unique fusion experience. Our lipsmacking creations will tickle
